data/derived/comb/progs/unify/prog3432.ml.out
Characters 75-82:
  | Sine s -> Format.sprintf "%d" (sin (3 * 2));;
                                       ^^^^^^^
Error: This expression has type int but an expression was expected of type
         float
